Fix spacing around tables

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -520,7 +520,7 @@ table
   font-size: 16px
   line-height: 31px
   font-family: $fonts
-  margin: $padding 0
+  margin: 30px 0
   width: 100%
   text-align: left
   border-collapse: collapse
